Closed
Bug 53621
Opened 25 years ago
Closed 25 years ago
Window moved to offscreen position messages are annoying
Categories
(Core :: XUL, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla0.8
People
(Reporter: jwbaker, Assigned: danm.moz)
References
Details
When debugging Mozilla, I get "window moved to offscreen position" messages by
the thousands on practically every web page I visit. Not only is this annoying,
it slows down the browser and makes useful assertions scroll right out of the
terminal before I can see them. This printf() has been in the code for at least
a month, and I'd love to get rid of it. Perhaps it could be defined as
danm_DEBUG?
| Reporter | ||
Updated•25 years ago
|
Assignee: trudelle → danm
| Reporter | ||
Comment 1•25 years ago
|
||
LXR blames danm
Comment 2•25 years ago
|
||
Assuming this is already #ifdef DEBUG, then we can't even consider it for
nsbeta3 status. It would have to be nominated for dogfood.
Comment 3•25 years ago
|
||
jwbaker: we can't approve this, but you could submit a patch...
(Addendum to the above, somewhat mysterious comment:)
The annoying printf is intended as a general warning that something's wrong
with your system, and perhaps to help shake out possible security issues (with
unseeable windows). But it looks like the linux build's widget code is tripping
it in the course of its normal operations, so the check is bogus and should be
fixed.
I'd appreciate it if you could take the time to find out exactly how it's being
triggered (which coordinate is offscreen and exactly how so?) and submit a patch
to leave the general check mostly intact but not be tripped up by the widget
code. Failing that, submit a patch to #ifdef 0 it.
Because of strange Netscape checkin procedures currently in effect, we can
check in a patch you submit for this bug, but since it's not killing anyone's
grandmother, we're not strictly allowed to work on it directly.
Keywords: helpwanted
| Reporter | ||
Comment 7•25 years ago
|
||
Mine.
Assignee: danm → jwbaker
Target Milestone: Future → mozilla1.0
*** Bug 56153 has been marked as a duplicate of this bug. ***
Comment 9•25 years ago
|
||
This message happens with every character typed in a text area, on the trunk,
but not on the branch. This causes performance problems and makes it impossible
to do performance testing on typing in text areas.
I attached a patch to bug 56153 to get rid of it. Since it happens only on the
trunk, we can check this in without worrying about rtm++ and so forth. Is
someone actively working on figuring out why we're seeing these messages? (I
see a future milestone.) Does anyone actually understand what it means, or care
about the message? If not, I vote we ifdef out the printf.
| Assignee | ||
Comment 10•25 years ago
|
||
Akkana: all your questions, except whether this bug is actively being worked on,
are answered in my comment above, dated 21 Sep. I say again, don't ifdef danm the
bogus check. See above.
| Assignee | ||
Comment 12•25 years ago
|
||
Warnings are now given only for top-level windows, which was the original
intention.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 13•25 years ago
|
||
> I'd appreciate it if you could take the time to find out exactly how it's
> being triggered
Just in case you're still interested (I no longer get the warning with the
applied patch), I saw this (on linux, using Enlightenment for a WM) when having
mozilla on a different virtual desktop than the currently active one - which is
offscreen, but still perfectly valid. Sometimes it also occured if I double
clicked on the titlebar in order to hide the window.
You need to log in
before you can comment on or make changes to this bug.
Description
•