offscreen warnings given only for top-level windows, which is all we care about, if anything. bug 53621. r=lumpy. i swear.